--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,7 @@ footer {
   color: var(--brand-color-white);
   font-weight: 700;
   font-size: 14px;
+  text-transform: uppercase;
 }
 .footer-container {
   display: flex;
@@ -548,6 +549,39 @@ footer {
 .elipse.footer:hover,
 .elipse.footer:focus {
   background-color: var(--brand-color-one);
+}
+.box-newsletter {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-left: 78px;
+  padding-top: 72px;
+}
+.button-sign-in {
+  fill: var(--brand-color-white);
+  background-color: var(--brand-color-one);
+  padding: 10px 48px 10px 42px;
+  max-width: 200px;
+  max-height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.15);
+}
+ .subscribe-form input {
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 15px 16px;
+  background-color: var(--brand-color-background);
+  color:var(--brand-color-white);
+  line-height: 1.07;
+  
+}
+.subscribe-form{
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
 }
 /* OKNO MODALNE  */
 .modal {
