--- a/css/styles.css
+++ b/css/styles.css
@@ -565,18 +565,17 @@ footer {
   max-height: 50px;
   box-shadow: rgba(0, 0, 0, 0.15);
 }
- .subscribe-form input {
+.subscribe-form input {
   width: 358px;
   height: 50px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 15px 16px;
   background-color: var(--brand-color-background);
-  color:var(--brand-color-white);
+  color: var(--brand-color-white);
   line-height: 1.07;
-
 }
-.subscribe-form{
+.subscribe-form {
   display: flex;
   flex-direction: row;
   gap: 12px;
@@ -643,14 +642,14 @@ footer {
   background-color: var(--brand-color-one);
   fill: var(--brand-color-white);
 }
-.order-form h2{
+.order-form h2 {
   font-size: 20px;
   font-weight: 700;
   padding-bottom: 12px;
-  line-height: 1.0;
+  line-height: 1;
   text-align: center;
 }
-.label-order{
+.label-order {
   position: relative;
   /*ikony-absolute w labelu-reelative */
   display: flex;
@@ -676,7 +675,6 @@ footer {
 }
 
 .label-order div {
-  /* aby div byl nad inputem */
   font-size: 12px;
   color: var(--brand-color-grey);
   margin-top: 12px;
@@ -687,7 +685,7 @@ footer {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   font-size: 12px;
-  line-height: 1.0;
+  line-height: 1;
   letter-spacing: 0.01em;
   padding: 12px 16px;
   height: 7.5rem;
@@ -697,7 +695,8 @@ footer {
 
 /* Zmiana koloru form na hoover i focus  */
 
-.label-order input:hover,.label-order input:focus,
+.label-order input:hover,
+.label-order input:focus,
 .label-order input:hover + svg,
 .label-order input:focus + svg {
   border-color: var(--brand-color-one);
@@ -714,4 +713,79 @@ footer {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.label-order textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
 
+
+.btn-form-send {
+  display: block;
+  margin: 30px auto 0 auto;
+  padding: 10px 76px;
+  font-weight: 700;
+  color: var(--brand-color-white);
+  line-height: 1.6;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background: var(--brand-color-one);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 1px solid var(--brand-color-one);
+}
+
+/* Ustawianie checkboxa */
+.label-check {
+  margin-top: 16px;
+  font-size: 14px;
+  /* wyrównanie diva i spana */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+}
+
+.label-check span {
+  letter-spacing: 0.03em;
+  line-height: 1.5;
+}
+
+.label-check a {
+  color: var(--brand-color-one);
+}
+
+/* ukrycie oryginalnego check */
+.hidden-checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: none;
+  height: 0;
+  width: 0;
+}
+/* styl zaimportowanego check */
+.custom-checkbox {
+  width: 16px;
+  height: 15px;
+  border: 1px solid var(--brand-color-text-black);
+  border-radius: 3px;
+}
+/* element "svg", który jest bezpośrednim potomkiem elementu o klasie ".custom-checkbox", a który występuje po elemencie o klasie ".hidden-checkbox". */
+.hidden-checkbox ~ .custom-checkbox > svg {
+  opacity: 1;
+}
+
+.hidden-checkbox ~ .custom-checkbox {
+  fill: transparent;
+  transition-property: border-color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hidden-checkbox:checked ~ .custom-checkbox {
+  background-color: var(--brand-color-one);
+  border-color: var(--brand-color-one);
+  fill: var(--brand-color-white);
+  transition-property: border-color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
